symlinked README.org

--- a/README.org
+++ b/README.org
@@ -1,61 +1,1 @@
-#+TITLE:     Tutorial: An Efficient Algorithm for Easy-First Non-Directional Dependency Parsing -- writing the code
-#+AUTHOR:    Aviad Reich
-#+EMAIL:     avi.rei@gmail.com
-#+DATE:      2012-07-21 Sat
-#+DESCRIPTION:
-#+KEYWORDS:
-#+LANGUAGE:  en
-#+OPTIONS:   H:3 num:t toc:t \n:nil @:t ::t |:t ^:t -:t f:t *:t <:t
-#+OPTIONS:   TeX:t LaTeX:t skip:nil d:nil todo:t pri:nil tags:not-in-toc
-#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
-#+EXPORT_SELECT_TAGS: export
-#+EXPORT_EXCLUDE_TAGS: noexport
-#+LINK_UP:   
-#+LINK_HOME: 
-#+XSLT:
-
-#+STYLE: <link rel="stylesheet" type="text/css" href="stylesheets/nlp.css" media="screen, projection" />
-#+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:
-
-* How to contribute to this document
-
-This document exists in XHTML, latex, text and org-mode
-versions. Editing the first three is straightforward, but will force
-all future contributors (if such will exist) to use the same
-version/format, since this will break the compatibility of the
-different formats. Do this only if you're sure the future contributors
-will be OK with it, or you know they will not exist (for example: you
-are now completing the document). If you have done so, be sure to
-either label the other versions as outdated/irrelevant, or 
-
-* An intro to dep parsing
-
-** Formats of the data
-** Example sentences
-** Rendering of trees in text and graphically
-
-* Intro to dep parsing using transition based parsing
-
-**  How shift reduce works
-** Turning a tree into a sequence of shift reduce transitions
-
-* Malt like parsing
-
-** Training a classifier to learn which transition is best at each step
-** Typical features used for malt
-
-* Evaluation methods for dep parsing
-
-* Evaluation of our malt parser
-
-* Easy First
-
-** Read the paper
-** Quiz on the paper
-*** Perceptron Classifier
-*** Cython
-
-* Cython primer
-
-
-
+tutorial.org
