almost lost question 4-9, but the HTML file saved me.

--- a/tutorial.org
+++ b/tutorial.org
@@ -109,10 +109,84 @@ http://dl.acm.org/citation.cfm?id=1857999.1858114.
    
 ** Quiz on the paper
 
+*** Introduction and Easy-First
+
+1) From the article (pg. 1): \\
+     "Current dependency parsers can be categorized
+     into three families: *local-and-greedy transition-based parsers*
+     (e.g., MALTPARSER (Nivre et al., 
+     2006)), *globally optimized graph-based parsers*
+     (e.g., MST P ARSER (McDonald et al., 2005)), and
+     *hybrid systems* (e.g., (Sagae and Lavie, 2006b;
+     Nivre and McDonald, 2008)), which combine the
+     output of various parsers into a new and improved
+     parse, and *which are orthogonal to our approach*."  (no emphasis   
+   in the original text) \\
+   _Who is orthogonal to the authors' approach? Why?_ \\
+   - a :: Local-and-greedy transition-based parsers
+   - b :: Globally optimized graph-based parsers
+   - c :: Hybrid systems
+   - d :: All of the above
+   - e :: None of the above
+   
+2) According to the article, what are the shortcomings of
+   transition-based parsers? Which of these have been addressed by the
+   easy-first parser? How?
+
+3) One might claim that transition-based parsers suffer from an
+   imbalance, in relation to the knowledge they have about the
+   sentence as it's being parsed. How might easy-first help to mend
+   this? 
+   
+4) Why are transition-based parsers often restricted to only a limited
+   look-ahead window? 
+   
+5) When will we prefer a globally optimized graph-based parser over a
+   transition-based parser? When would a transition-based one be more
+   appropriate? 
+   
+6) The article states that easy-first is a greedy algorithm. What are
+   the benefits of this fact? 
+
+7) How are transition-based parsers different than humans when
+   dependency-parsing a sentence? 
+
+8) Do humans annotate a sentence in a way similar to graph-based
+   parsers? 
+
+9) Of the three parser classes (transition, graph-based and
+   easy-first), which is the most similar to a human's way of
+   annotating a sentence? 
+
+10) In your opinion, is being similar to the human way of parsing a
+    sentence a positive or a negative approach to the problem? Why?
+
+*** Parsing Algorithm
+
+1) Look at figure 1 in the article. In each step, how is the action
+    to be performed chosen?
+
+2) In step 1 (figure 1), if the bold number *403* was instead 136,
+   what action would have been performed? 
+
+3) What is the range of values for the arc "brown --> fox", assuming
+   all others remain unchanged, that will lead to the same parse tree?
+   What is the range for the arcs "a --> brown" and "joy --> with"
+   that will lead to the same parse tree?
+
+4) Assuming the *difficulty* of choosing an action is measured by the
+   difference between the two highest arc's score. On which step was
+   making this decision hardest? Can you "feel" this difficulty trying
+   to parse the sentence yourself?
+
+5) In algorithm 1: if line 3 would be *changed* to
+   $pending = p_{1} \ldots p_{n-1} \leftarrow w_{1} \ldots w_{n-1}$
+
 *** Perceptron Classifier
 *** Cython
     
 * Cython primer
+
 
 
 
