--- a/tutorial.tex
+++ b/tutorial.tex
@@ -1,4 +1,4 @@
-% Created 2012-08-14 Tue 13:31
+% Created 2012-08-15 Wed 11:59
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -130,10 +130,32 @@ website:
    
 \subsection{Quiz on the paper}
 \label{sec-7-2}
-\subsubsection{Perceptron Classifier}
+\subsubsection{By Sections}
 \label{sec-7-2-1}
-\subsubsection{Cython}
+\begin{itemize}
+
+\item Introduction
+\label{sec-7-2-1-1}%
+\begin{enumerate}
+\item From the article (pg. 1):
+\end{enumerate}
+\begin{quote}
+Current dependency parsers can be categorized
+into three families: local-and-greedy transition-
+based parsers (e.g., MALTPARSER (Nivre et al.,
+2006)), globally optimized graph-based parsers
+(e.g., MST P ARSER (McDonald et al., 2005)), and
+hybrid systems (e.g., (Sagae and Lavie, 2006b;
+Nivre and McDonald, 2008)), which combine the
+output of various parsers into a new and improved
+parse, and which are orthogonal to our approach.
+
+\end{quote}
+\end{itemize} % ends low level
+\subsubsection{Perceptron Classifier}
 \label{sec-7-2-2}
+\subsubsection{Cython}
+\label{sec-7-2-3}
 
     
 \section{Cython primer}
