--- a/tutorial.org
+++ b/tutorial.org
@@ -186,19 +186,48 @@ http://dl.acm.org/citation.cfm?id=1857999.1858114.
    use figure 1) 
    In general, what will this change cause? \\
    file:images/Algorithm1.png]] \\
+   
 6) What does the function EdgeFor do? How?
+   
 7) Write the loop from line 5 in python.
 
-8) Can you find this loop in the file [[easyfirst.py]]? (hint: the
-   variables in lines 174,175 are never used, and can be safely
-   removed from the =train= function).
+8) Can you find this loop in the file [[easyfirst.py]]? \\
+   *hint 1*: \\
+   the variables in lines 174,175 are never used, and can be safely 
+   removed from the =train= function).\\
+   *hint 2*: \\
+   =>>> zip(range(10), range(10)[1:])= \\
+   =[(0, 1), (1, 2), (2, 3), (3, 4), (4, 5), (5, 6), (6, 7), (7, 8), (8, 9)]=
+   
+9) In line 5, where is $score(act(i))$ taken from?
 
-9) 
-
-*** Perceptron Classifier
-*** Cython
+*** Learning Algorithm and Feature Representation 
+    see [[Perceptron Classifier]]
     
-* Cython primer
+***  Computational Complexity and Efficient Implementation
+     
+1) From the article (pg. 5): \\
+   "The parsing algorithm (Algorithm 1) begins with
+   $n + 1$ disjoint structures (the words of the sentence +
+   ROOT symbol), and terminates with one connected
+   structure. Each iteration of the main loop connects
+   two structures and removes one of them, and so the
+   loop repeats for exactly $n$ times.
+   The $\arg\max$ in line 5 selects the maximal scoring
+   action/location pair. At iteration $i$, there are $n - 1$
+   locations to choose from, and a naive computation of
+   the $\arg\max$ is $O(n)$, resulting in an $O(n^{2})$ algorithm."\\
+   Is the algorithm really $O(n^{2})$? \\
+   *Why? What is the non-naive computation?*
+    
+*** <<Perceptron Classifier>>
+*** <<Cython>>
+    First, if you are not yet familiar with [[http://cython.org][Cython]], it's highly
+    recommended you read the [[http://docs.cython.org/][docs]] first, or minimally (and
+    reasonably) [[http://conference.scipy.org/proceedings/SciPy2009/paper_1/full_text.pdf][the tutorial (pdf)]]. A minimal [[Cython Primer]] is given
+    below. 
+    
+* <<Cython Primer>>
 
 * Code
 ** <<easyfirst.py>>:
